--- a/src/main/client/src/app/pages/map-view/map-view.component.html
+++ b/src/main/client/src/app/pages/map-view/map-view.component.html
@@ -1,5 +1,5 @@
+<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
 <div class="app-fxLayout app-row app-fill">
-
   <div style="flex: 1 30%; max-width: 300px;">
     <div>
     <h4>{{ 'tenants' | translate}}</h4>
