--- a/src/main/client/src/app/pages/map-view/map-view.component.html
+++ b/src/main/client/src/app/pages/map-view/map-view.component.html
@@ -2,50 +2,42 @@
 <div class="app-fxLayout app-row app-fill">
   <div style="flex: 1 30%; max-width: 300px;">
     <div>
-    <h4>{{ 'tenants' | translate}}</h4>
-    <mat-form-field>
-      <mat-label>{{ 'tenant' | translate}}</mat-label>
-      <mat-select [(ngModel)]="state.tenant" (selectionChange)="changeTenant()">
-        @for (t of state.tenants; track t) {
+      <h4>{{ 'tenants' | translate}}</h4>
+      <mat-form-field>
+        <mat-label>{{ 'tenant' | translate}}</mat-label>
+        <mat-select [(ngModel)]="state.tenant" (selectionChange)="changeTenant()">
+          @for (t of state.tenants; track t) {
           <mat-option [value]="t">{{ t.val | translate}}</mat-option>
-        }
-      </mat-select>
-    </mat-form-field>
-    </div>
-    <div>
-      <div echarts style="height: 100px; width: 100%;"
-          [options]="chartOptionsRok" 
-          (chartInit)="onChartRokInit($event)" 
-          (chartBrushEnd)="onSetYears($event)" 
-          (chartBrushSelected)="onClearSelection($event)">
-      </div>
-      <div *ngIf="limits">od: {{ limits[0] }} - do: {{ limits[1] }}</div>
+          }
+        </mat-select>
+      </mat-form-field>
     </div>
     <div>
       <h3>{{ 'Recipients' | translate}}</h3>
-      <mat-list  style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let identity of recipients"  [class.app-active]="identity === activeIdentity"
-        (click)="clickRecipient(identity)">
+      <mat-list style="max-height: 200px; width: 100%; overflow-y: scroll;">
+        <mat-list-item *ngFor="let identity of recipients" [class.app-active]="identity === activeIdentity"
+          (click)="clickRecipient(identity)">
           <mat-icon *ngIf="identity === activeIdentity">check</mat-icon>
-          {{ identity.name}} ({{identity.value}}) 
+          {{ identity.val}} ({{identity.count}})
         </mat-list-item>
       </mat-list>
     </div>
     <div>
       <h3>{{ 'Mentioned' | translate}}</h3>
-      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let identity of mentioned" 
-          (mouseout)="clearHighlight()" (click)="highlightLinks(identity)">
-          {{ identity.name}} ({{identity.value}})
+      <mat-list style="max-height: 200px; width: 100%; overflow-y: scroll;">
+        <mat-list-item *ngFor="let identity of mentioned" (mouseout)="clearHighlight()"
+          (click)="highlightLinks(identity)">
+          {{ identity.val}} ({{identity.count}})
         </mat-list-item>
       </mat-list>
     </div>
   </div>
-
-  <div style="height: 550px; flex: 1 70%" class="app-fxFlex"
-      leaflet 
-      [leafletOptions]="options"
+  <div style="height: 100%; width: 100%; display: flex; flex-direction: column; align-content: flex-start;">
+    <div  style="height: 200px; width: 100%;">
+      <app-years-chart *ngIf="solrResponse?.facets.date_year" [dateYearFacet]="solrResponse.facets.date_year" (onChangeLimits)="changeLimits($event)" ></app-years-chart>
+    </div>
+    <div class="app-fxFlex" leaflet [leafletOptions]="options"
       (leafletMapReady)="onMapReady($event)">
+    </div>
   </div>
-
 </div>
