--- a/src/main/client/src/app/pages/map-view/map-view.component.scss
+++ b/src/main/client/src/app/pages/map-view/map-view.component.scss
@@ -2,3 +2,11 @@ mat-progress-bar {
     position: absolute;
     z-index: 1000;
 }
+
+.app-letters-info {
+    position: absolute;
+    width: 400px;
+    right: 20px;
+    top:10px;
+    z-index: 2000;
+}
