--- a/src/main/client/src/app/components/years-chart/years-chart.component.html
+++ b/src/main/client/src/app/components/years-chart/years-chart.component.html
@@ -1,3 +1,3 @@
 <div echarts style="height: 100%; width: 100%;" [options]="chartOptionsRok" (chartInit)="onChartRokInit($event)"
-        (chartBrushEnd)="onSetYears($event)" (chartBrushSelected)="onClearSelection($event)">
+        (chartBrushEnd)="onSetYears($event)" >
       </div>
