--- a/src/main/client/src/app/components/letters-info/letters-info.component.html
+++ b/src/main/client/src/app/components/letters-info/letters-info.component.html
@@ -3,7 +3,7 @@
         <mat-card-title>{{ header() }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-            <div [innerHtml]="content()"></div>
+            <div [innerHtml]="content()" class="app-info-content"></div>
     </mat-card-content>
     <mat-card-actions align="end" class="app-mat-card-actions">
         <button mat-raised-button (click)="close()">{{ 'Close' }}</button>
