--- a/src/main/client/src/app/pages/keywords/keywords.component.scss
+++ b/src/main/client/src/app/pages/keywords/keywords.component.scss
@@ -1,3 +1,7 @@
 mat-progress-bar {
     position: absolute;
 }
+
+.app-keyword-color{
+    width:10px; height: 8px; display: inline-block; vertical-align: middle;
+}
