--- a/src/main/client/src/scss/_app-variables.scss
+++ b/src/main/client/src/scss/_app-variables.scss
@@ -9,17 +9,16 @@
   //--app-test: mat.get-theme-color($my-theme, primary, default);
  --app-test: #{map.get(my-theme.$primary-palette, 10)};
  --app-test2: #{map.get(map.get(my-theme.$primary-palette, error), 25)};
-
  // colors
  --app-color-lightnes: #ffffff;
  --app-color-lightnes-rgb: 255, 255, 255;
  --app-color-darknes: #000000;
  --app-color-darknes-rgb: 0, 0, 0;
- --app-color-primary: var(--mat-sys-on-primary);
  --app-color-warning: #f44336;
 
  --app-color-info: #ff6f00;
- --app-color-selected: #{rgba(var(--app-color-primary), .1)};
+ --app-color-selected: #{map.get(map.get(my-theme.$primary-palette, error), 50)};
+
  
  --app-color-success: #2e7d32;
 
