--- a/src/main/client/src/app/pages/identities/identities.component.html
+++ b/src/main/client/src/app/pages/identities/identities.component.html
@@ -5,16 +5,16 @@
     <div *ngIf="authors">
       <h3>{{ 'authors' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let k of authors; let idx = index" >
-          <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
+        <mat-list-item *ngFor="let k of authors; let idx = index" (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()" >
+          {{ k.val}} ({{k.count}}) 
         </mat-list-item>
       </mat-list>
     </div>
     <div *ngIf="recipients">
       <h3>{{ 'recipients' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let k of recipients; let idx = index" >
-          <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
+        <mat-list-item *ngFor="let k of recipients; let idx = index" (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()" >
+          {{ k.val}} ({{k.count}}) 
         </mat-list-item>
       </mat-list>
     </div>
