--- a/src/main/client/src/app/pages/centrality/centrality.component.html
+++ b/src/main/client/src/app/pages/centrality/centrality.component.html
@@ -2,7 +2,7 @@
 <div class="app-fxLayout app-row app-fill" style="position: relative;">
   <div style="flex: 1 30%;" class="app-filters">
 
-    <div *ngIf="authors">
+    <!-- <div *ngIf="authors">
       <h3>{{ 'authors' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
         <mat-list-item *ngFor="let k of authors; let idx = index" (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()" >
@@ -14,6 +14,14 @@
       <h3>{{ 'recipients' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
         <mat-list-item *ngFor="let k of recipients; let idx = index" (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()" >
+          {{ k.val}} ({{k.count}}) 
+        </mat-list-item>
+      </mat-list>
+    </div> -->
+    <div *ngIf="mentioned">
+      <h3>{{ 'mentioned' | translate}}</h3>
+      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
+        <mat-list-item *ngFor="let k of mentioned; let idx = index" (mouseover)="showNode(k, 'mentioned')" (mouseout)="hideNode()" >
           {{ k.val}} ({{k.count}}) 
         </mat-list-item>
       </mat-list>
