--- a/src/main/client/src/app/pages/professions/professions.component.html
+++ b/src/main/client/src/app/pages/professions/professions.component.html
@@ -1,4 +1,5 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+<div>{{ state.tenant()?.val }}</div>
 <div class="app-fxLayout app-row app-fill" style="position: relative;">
     <div style="flex: 1 30%;" class="app-filters">
 
