--- a/src/main/client/src/app/app.component.html
+++ b/src/main/client/src/app/app.component.html
@@ -1,10 +1,8 @@
-
-
 <div class="app-fxLayout app-column app-fill">
-    <app-navbar></app-navbar>
-    <div class="app-fxFlex app-oh">
-      <div class="app-container-header" *ngIf="state.tenant()">{{ 'tenant' | translate }}: {{ state.tenant().val }}</div>
-      <router-outlet></router-outlet> 
-    </div>
-    <app-footer></app-footer>
+  <app-navbar></app-navbar>
+    <!-- <div class="app-container-header" *ngIf="state.tenant()">{{ 'tenant' | translate }}: {{ state.tenant().val }}</div> -->
+  <div class="app-fxFlex app-oh">
+    <router-outlet></router-outlet>
   </div>
+  <app-footer></app-footer>
+</div>
