--- a/src/main/client/src/app/components/navbar/navbar.component.html
+++ b/src/main/client/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
   <div class="app-fxLayout app-row app-center-v">
     <!-- <a mat-button >{{ 'Login' | translate }}</a> -->
 
-    
+    <span class="app-container-header" *ngIf="state.tenant()">{{ 'tenant' | translate }}: {{ state.tenant().val }}</span>
     <button mat-button [matMenuTriggerFor]="views">{{'views' | translate}}</button>
     <mat-menu #views="matMenu">
       @for (t of state.views; track t) {
