--- a/src/main/client/src/app/pages/centrality/centrality.component.html
+++ b/src/main/client/src/app/pages/centrality/centrality.component.html
@@ -1,25 +1,8 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
 <div class="app-fxLayout app-row app-fill" style="position: relative;">
   <div style="flex: 1 30%;" class="app-filters">
-
-    <!-- <div *ngIf="authors">
-      <h3>{{ 'authors' | translate}}</h3>
-      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let k of authors; let idx = index" (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()" >
-          {{ k.val}} ({{k.count}}) 
-        </mat-list-item>
-      </mat-list>
-    </div>
-    <div *ngIf="recipients">
-      <h3>{{ 'recipients' | translate}}</h3>
-      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let k of recipients; let idx = index" (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()" >
-          {{ k.val}} ({{k.count}}) 
-        </mat-list-item>
-      </mat-list>
-    </div> -->
     <div *ngIf="mentioned">
-      <h3>{{ 'mentioned' | translate}}</h3>
+      <h3>{{ 'field.mentioned' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
         <mat-list-item *ngFor="let k of mentioned; let idx = index" (mouseover)="showNode(k, 'mentioned')" (mouseout)="hideNode()" >
           {{ k.val}} ({{k.count}}) 
@@ -28,8 +11,7 @@
     </div>
     
   </div>
-  <div
-    style="height: 100%; width: 100%; display: flex; flex-direction: column; align-content: flex-start; position: relative;">
+  <div class="app-content">
     <div style="height: 200px; width: 100%;">
       <app-years-chart *ngIf="solrResponse?.facets.date_year" [dateYearFacet]="solrResponse.facets.date_year"
         (onChangeLimits)="changeLimits($event)"></app-years-chart>
