--- a/src/main/client/src/app/pages/identities/identities.component.html
+++ b/src/main/client/src/app/pages/identities/identities.component.html
@@ -3,7 +3,7 @@
   <div style="flex: 1 30%;" class="app-filters">
 
     <div *ngIf="authors">
-      <h3>{{ 'authors' | translate}}</h3>
+      <h3>{{ 'field.authors' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
         <mat-list-item *ngFor="let k of authors; let idx = index" (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()" >
           {{ k.val}} ({{k.count}}) 
@@ -11,7 +11,7 @@
       </mat-list>
     </div>
     <div *ngIf="recipients">
-      <h3>{{ 'recipients' | translate}}</h3>
+      <h3>{{ 'field.recipients' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
         <mat-list-item *ngFor="let k of recipients; let idx = index" (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()" >
           {{ k.val}} ({{k.count}}) 
@@ -20,8 +20,7 @@
     </div>
     
   </div>
-  <div
-    style="height: 100%; width: 100%; display: flex; flex-direction: column; align-content: flex-start; position: relative;">
+  <div class="app-content">
     <div style="height: 200px; width: 100%;">
       <app-years-chart *ngIf="solrResponse?.facets.date_year" [dateYearFacet]="solrResponse.facets.date_year"
         (onChangeLimits)="changeLimits($event)"></app-years-chart>
