--- a/src/main/client/src/app/pages/professions/professions.component.html
+++ b/src/main/client/src/app/pages/professions/professions.component.html
@@ -1,10 +1,8 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-<div>{{ state.tenant()?.val }}</div>
 <div class="app-fxLayout app-row app-fill" style="position: relative;">
     <div style="flex: 1 30%;" class="app-filters">
-
         <div *ngIf="professions_author">
-            <h3>{{ 'authors' | translate}}</h3>
+            <h3>{{ 'field.authors' | translate}}</h3>
             <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
                 <mat-list-item *ngFor="let k of professions_author; let idx = index" (mouseover)="showNode(k, 'author')"
                     (mouseout)="hideNode()">
@@ -13,7 +11,7 @@
             </mat-list>
         </div>
         <div *ngIf="professions_recipient">
-            <h3>{{ 'recipients' | translate}}</h3>
+            <h3>{{ 'field.recipients' | translate}}</h3>
             <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
                 <mat-list-item *ngFor="let k of professions_recipient; let idx = index"
                     (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()">
@@ -23,7 +21,7 @@
         </div>
 
     </div>
-    <div style="height: 100%; width: 100%; display: flex; flex-direction: column; align-content: flex-start; position: relative;">
+    <div class="app-content">
             <mat-card *ngIf="invalidTenant" appearance="outlined" class="app-invalidTenant">
                 <mat-card-header>
                     <mat-card-title> {{ 'invalidTenant' | translate}} </mat-card-title>
