--- a/src/main/client/src/scss/_app-global.scss
+++ b/src/main/client/src/scss/_app-global.scss
@@ -258,14 +258,20 @@ fieldset {
 }
 
 .app-container-header {
-  font-size: 2em;
+  font-size: 1.2em;
   font-weight: bold;
-  text-align: center;
+  // text-align: center;
+  position: absolute;
+    left: 50%;
 }
 
 .app-info-content {
   max-height: 400px;
   overflow: auto;
+}
+
+.app-content{
+  height: 100%; width: 100%; display: flex; flex-direction: column; align-content: flex-start; position: relative;
 }
 
 .app-filters {
