--- a/src/main/client/src/app/pages/centrality/centrality.component.html
+++ b/src/main/client/src/app/pages/centrality/centrality.component.html
@@ -1,11 +1,19 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
 <div class="app-fxLayout app-row app-fill" style="position: relative;">
   <div style="flex: 1 30%;" class="app-filters">
+    <div *ngIf="recipients">
+      <h3>{{ 'field.recipients' | translate}}</h3>
+      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
+        <mat-list-item *ngFor="let k of recipients; let idx = index" (click)="clickRecipient(k)">
+          <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
+        </mat-list-item>
+      </mat-list>
+    </div>
     <div *ngIf="mentioned">
       <h3>{{ 'field.mentioned' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
         <mat-list-item *ngFor="let k of mentioned; let idx = index" (mouseover)="showNode(k, 'mentioned')" (mouseout)="hideNode()" >
-          {{ k.val}} ({{k.count}}) 
+          <span [style.color]="colors[idx % colors.length]">{{ k.val}} ({{k.count}}) </span>
         </mat-list-item>
       </mat-list>
     </div>
