--- a/src/main/client/src/app/pages/centrality/centrality.component.html
+++ b/src/main/client/src/app/pages/centrality/centrality.component.html
@@ -4,20 +4,25 @@
     <div *ngIf="recipients">
       <h3>{{ 'field.recipients' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let k of recipients; let idx = index" (click)="clickRecipient(k)">
+        @for(k of recipients; track $index;){
+        <mat-list-item (click)="clickRecipient(k)">
           <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
         </mat-list-item>
+        }
       </mat-list>
     </div>
     <div *ngIf="mentioned">
       <h3>{{ 'field.mentioned' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let k of mentioned; let idx = index" (mouseover)="showNode(k, 'mentioned')" (mouseout)="hideNode()" >
+        @for(k of recipients; track $index; let idx = $index){
+        <mat-list-item (mouseover)="showNode(k, 'mentioned')"
+          (mouseout)="hideNode()">
           <span [style.color]="colors[idx % colors.length]">{{ k.val}} ({{k.count}}) </span>
         </mat-list-item>
+        }
       </mat-list>
     </div>
-    
+
   </div>
   <div class="app-content">
     <div style="height: 200px; width: 100%;">
@@ -25,10 +30,9 @@
         (onChangeLimits)="changeLimits($event)"></app-years-chart>
     </div>
 
-    <div  class="app-fxFlex">
+    <div class="app-fxFlex">
       <div style="overflow: auto; height:100%; ">
-        <div  echarts style="width: 100%; height:100%;" 
-          [options]="graphOptions" (chartInit)="onGraphChartInit($event)">
+        <div echarts style="width: 100%; height:100%;" [options]="graphOptions" (chartInit)="onGraphChartInit($event)">
         </div>
       </div>
     </div>
