--- a/src/main/client/src/app/pages/identities/identities.component.html
+++ b/src/main/client/src/app/pages/identities/identities.component.html
@@ -5,20 +5,25 @@
     <div *ngIf="authors">
       <h3>{{ 'field.authors' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let k of authors; let idx = index" (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()" >
-          {{ k.val}} ({{k.count}}) 
+        @for(k of authors; track $index; let idx = $index){
+        <mat-list-item (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()">
+          {{ k.val}} ({{k.count}})
         </mat-list-item>
+        }
       </mat-list>
     </div>
     <div *ngIf="recipients">
       <h3>{{ 'field.recipients' | translate}}</h3>
       <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        <mat-list-item *ngFor="let k of recipients; let idx = index" (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()" >
-          {{ k.val}} ({{k.count}}) 
+        @for(k of recipients; track $index; let idx = $index){
+        <mat-list-item (mouseover)="showNode(k, 'recipient')"
+          (mouseout)="hideNode()">
+          {{ k.val}} ({{k.count}})
         </mat-list-item>
+        }
       </mat-list>
     </div>
-    
+
   </div>
   <div class="app-content">
     <div style="height: 200px; width: 100%;">
@@ -26,10 +31,9 @@
         (onChangeLimits)="changeLimits($event)"></app-years-chart>
     </div>
 
-    <div  class="app-fxFlex">
+    <div class="app-fxFlex">
       <div style="overflow: auto; height:100%; ">
-        <div  echarts style="width: 100%; height:100%;" 
-          [options]="graphOptions" (chartInit)="onGraphChartInit($event)">
+        <div echarts style="width: 100%; height:100%;" [options]="graphOptions" (chartInit)="onGraphChartInit($event)">
         </div>
       </div>
     </div>
