--- a/src/main/client/src/app/pages/professions/professions.component.html
+++ b/src/main/client/src/app/pages/professions/professions.component.html
@@ -1,27 +1,29 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-            <mat-card *ngIf="invalidTenant" appearance="outlined" class="app-invalidTenant">
-                <mat-card-header>
-                    <mat-card-title> {{ 'invalidTenant' | translate}} </mat-card-title>
-                </mat-card-header>
-            </mat-card>
+<mat-card *ngIf="invalidTenant" appearance="outlined" class="app-invalidTenant">
+    <mat-card-header>
+        <mat-card-title> {{ 'invalidTenant' | translate}} </mat-card-title>
+    </mat-card-header>
+</mat-card>
 <div class="app-fxLayout app-row app-fill" style="position: relative;" *ngIf="!invalidTenant">
     <div style="flex: 1 30%;" class="app-filters">
         <div *ngIf="professions_author">
             <h3>{{ 'field.authors' | translate}}</h3>
             <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-                <mat-list-item *ngFor="let k of professions_author; let idx = index" (mouseover)="showNode(k, 'author')"
-                    (mouseout)="hideNode()">
+                @for(k of professions_author; track $index; let idx = $index){
+                <mat-list-item (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()">
                     {{ k.val}} ({{k.count}})
                 </mat-list-item>
+                }
             </mat-list>
         </div>
         <div *ngIf="professions_recipient">
             <h3>{{ 'field.recipients' | translate}}</h3>
             <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-                <mat-list-item *ngFor="let k of professions_recipient; let idx = index"
-                    (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()">
+                @for(k of professions_recipient; track $index; let idx = $index){
+                <mat-list-item (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()">
                     {{ k.val}} ({{k.count}})
                 </mat-list-item>
+                }
             </mat-list>
         </div>
 
