--- a/src/main/client/src/styles.scss
+++ b/src/main/client/src/styles.scss
@@ -1,6 +1,6 @@
-@use '@angular/material' as mat;
+// @use '@angular/material' as mat;
 
-@use 'scss/theme-colors' as my-theme; 
+// @use 'scss/theme-colors' as my-theme; 
 
 @use 'scss/app-variables';
 @use 'scss/app-layout';
