--- a/src/main/client/src/app/pages/keywords/keywords.component.html
+++ b/src/main/client/src/app/pages/keywords/keywords.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div class="app-content">
-    <div style="height: 200px; width: 100%;">
+    <div class="app-years">
       <app-years-chart *ngIf="solrResponse?.facets.date_year" [dateYearFacet]="solrResponse.facets.date_year"
         (onChangeLimits)="changeLimits($event)"></app-years-chart>
     </div>
