--- a/src/main/client/src/app/pages/map-view/map-view.component.html
+++ b/src/main/client/src/app/pages/map-view/map-view.component.html
@@ -20,7 +20,7 @@
     </div>
     <div *ngIf="mentioned">
       <h3>{{ 'field.mentioned' | translate}}</h3>
-      <mat-list style="max-height: 200px; width: 100%; overflow-y: scroll;">
+      <mat-list style="max-height: 150px; width: 100%; overflow-y: scroll;">
         @for(identity of mentioned; track $index; let idx = $index){
         <mat-list-item (mouseout)="clearHighlight()" (click)="highlightLinks(identity)">
           {{ identity.val}} ({{identity.count}})
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="app-content">
-    <div style="height: 200px; width: 100%;">
+    <div class="app-years">
       <app-years-chart *ngIf="solrResponse?.facets.date_year" [dateYearFacet]="solrResponse.facets.date_year"
         (onChangeLimits)="changeLimits($event)"></app-years-chart>
     </div>
