--- a/src/main/client/src/app/pages/professions/professions.component.html
+++ b/src/main/client/src/app/pages/professions/professions.component.html
@@ -29,7 +29,7 @@
 
     </div>
     <div class="app-content">
-        <div style="height: 200px; width: 100%;">
+        <div class="app-years">
             <app-years-chart *ngIf="solrResponse?.facets.date_year" [dateYearFacet]="solrResponse.facets.date_year"
                 (onChangeLimits)="changeLimits($event)"></app-years-chart>
         </div>
