--- a/src/main/client/src/scss/_app-mat-override.scss
+++ b/src/main/client/src/scss/_app-mat-override.scss
@@ -1,30 +1,35 @@
 // --- MATERIAL OVERRIDE ---
 @use 'sass:map';
 @use '@angular/material' as mat;
-@use 'theme-colors' as my-theme; 
+@use 'theme-colors' as my-theme;
 
 :root {
   @include mat.toolbar-overrides((
     container-background-color: var(--mat-sys-primary),
-      container-text-color: white,
-      title-text-size: 20px,
-      //standard-height: 80px
-      ));
+    container-text-color: white,
+    title-text-size: 20px,
+    //standard-height: 80px
+  ));
 
 
   @include mat.list-overrides((
     list-item-hover-label-text-color: #{map.get(map.get(my-theme.$primary-palette, error), 50)},
     list-item-one-line-container-height: 32px
-    ));
+  ));
 
-    @include mat.form-field-overrides((
-      container-height: 48px
-    ));
+  @include mat.form-field-overrides((
+    container-height: 48px
+  ));
 
-    @include mat.progress-bar-overrides((
-    active-indicator-color:  #{map.get(map.get(my-theme.$primary-palette, error), 50)},
+  @include mat.progress-bar-overrides((
+    active-indicator-color: #{map.get(map.get(my-theme.$primary-palette, error), 50)},
     track-color: #{map.get(map.get(my-theme.$primary-palette, error),10)}
   ));
+
+  @include mat.button-overrides((
+    protected-container-shape: 4px
+  ));
+
 }
 
 // form field
